crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__big_boolean_lift_and_lower.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 851
description: "module Main exposing (..)\nimport Bool\nimport Logic\nimport Lift exposing (Lift)\nmake : bool -> Bool.Bool\nmake = lift\nmain : (bool, bool)\nmain = (lower (make Primitive.False), lower (make Primitive.True))\n"
---
--- unoptimized Core
let lower#2 : nash/base:Bool.Bool -> bool = \value#4 : nash/base:Bool.Bool -> let match#5 : nash/base:Bool.Bool = value#4 in
let projection#10 : pair int (list Data) = unConstrData match#5 in
case@Pair projection#10 of
  Pair tag#6 fields#7 -> case@Tag tag#6 of
    0 -> false
    1 -> true in
let lift#8 : bool -> nash/base:Bool.Bool = \value#9 : bool -> case@Bool value#9 of
  True -> constrData 1 (con (list data) [])
  False -> constrData 0 (con (list data) []) in
let make#3 : bool -> nash/base:Bool.Bool = lift#8 in
let main#1 : (bool, bool) = constr 0 (lower#2 (make#3 false)) (lower#2 (make#3 true)) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam lower_2
    [(lam lift_8
      [(lam make_3
        [(lam main_1 main_1)
          (constr 0
            [lower_2 [make_3 (con bool False)]]
            [lower_2 [make_3 (con bool True)]])])
        lift_8])
      (lam value_9
        (case
          value_9
          [[(builtin constrData) (con integer 0)] (con (list data) [])]
          [[(builtin constrData) (con integer 1)] (con (list data) [])]))])
    (lam value_4
      [(lam match_5
        [(lam projection_10
          (case
            projection_10
            (lam tag_6 (lam fields_7 (case tag_6 (con bool False) (con bool True))))))
          [(builtin unConstrData) match_5]])
        value_4])])
--- optimized Core
let lower#16 : nash/base:Bool.Bool -> bool = \value#11 : nash/base:Bool.Bool -> let projection#13 : pair int (list Data) = unConstrData value#11 in
case@Pair projection#13 of
  Pair tag#14 fields#15 -> case@Tag tag#14 of
    0 -> false
    1 -> true in
let lift#18 : bool -> nash/base:Bool.Bool = \value#17 : bool -> case@Bool value#17 of
  True -> constrData 1 (con (list data) [])
  False -> constrData 0 (con (list data) []) in
let anf#21 : nash/base:Bool.Bool = lift#18 false in
let anf#22 : bool = lower#16 anf#21 in
let anf#23 : nash/base:Bool.Bool = lift#18 true in
let anf#24 : bool = lower#16 anf#23 in
constr 0 anf#22 anf#24
--- optimized UPLC
(program 1.1.0
  [(lam lower_5
    [(lam lift_7
      [(lam anf_8
        [(lam anf_9
          [(lam anf_10 [(lam anf_12 (constr 0 anf_9 anf_12)) [lower_5 anf_10]])
            [lift_7 (con bool True)]])
          [lower_5 anf_8]])
        [lift_7 (con bool False)]])
      (lam value_6
        (case
          value_6
          [[(builtin constrData) (con integer 0)] (con (list data) [])]
          [[(builtin constrData) (con integer 1)] (con (list data) [])]))])
    (lam value_1
      [(lam projection_2
        (case
          projection_2
          (lam tag_3 (lam fields_4 (case tag_3 (con bool False) (con bool True))))))
        [(builtin unConstrData) value_1]])])
--- result
(constr 0 (con bool False) (con bool True))
--- logs
[]
--- budget
cpu: 1165578, memory: 6928
