crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__big_field_skip_rejects_short_payload.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 726
description: "module Main exposing (..)\nimport Primitive exposing (..)\ntype alias Record = { a : Int, b : Int, c : Int }\nmalformed : Record\nmalformed = coerce (List [I 1])\nmain = malformed.c\n"
---
--- unoptimized Core
let fromInt#8 : int -> int = \value#9 : int -> value#9 in
let malformed#2 : { _0 : Int, _1 : Int, _2 : Int } = (\coerce#5 : Data -> coerce#5) ((\field#6 : list Data -> listData field#6) (mkCons ((\field#7 : int -> iData field#7) (fromInt#8 1)) (con (list data) []))) in
let projection#10 : list Data = unListData malformed#2 in
let projection#11 : list Data = dropList 2 projection#10 in
case@List projection#11 of
  Cons head#3 tail#4 -> let main#1 : Int = head#3 in
  main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_8
    [(lam malformed_2
      [(lam projection_10
        [(lam projection_11
          (case
            projection_11
            (lam head_3 (lam tail_4 [(lam main_1 main_1) head_3]))
            (error)))
          [[(force (builtin dropList)) (con integer 2)] projection_10]])
        [(builtin unListData) malformed_2]])
      [(lam coerce_5 coerce_5)
        [(lam field_6 [(builtin listData) field_6])
          [[(force (builtin mkCons))
            [(lam field_7 [(builtin iData) field_7]) [fromInt_8 (con integer 1)]]]
            (con (list data) [])]]]])
    (lam value_9 value_9)])
--- optimized Core
let anf#24 : Data = iData 1 in
let anf#25 : list Data = mkCons anf#24 (con (list data) []) in
let anf#26 : Data = listData anf#25 in
let projection#18 : list Data = unListData anf#26 in
let projection#19 : list Data = dropList 2 projection#18 in
case@List projection#19 of
  Cons head#20 tail#21 -> head#20
--- optimized UPLC
(program 1.1.0
  [(lam builtin_8
    [(lam builtin_9
      [(lam anf_1
        [(lam anf_2
          [(lam anf_3
            [(lam projection_4
              [(lam projection_5 (case projection_5 (lam head_6 (lam tail_7 head_6)) (error)))
                [[builtin_8 (con integer 2)] projection_4]])
              [(builtin unListData) anf_3]])
            [(builtin listData) anf_2]])
          [[builtin_9 anf_1] (con (list data) [])]])
        [(builtin iData) (con integer 1)]])
      (force (builtin mkCons))])
    (force (builtin dropList))])
--- result
error: ExplicitErrorTerm
--- logs
[]
--- budget
cpu: 268171, memory: 232
