crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__big_record_pattern_skips_ignored_fields.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 964
description: "module Main exposing (..)\ntype alias Record = { a : Int, b : Int, c : Int, d : Int, e : Int }\nread : Record -> int\nread value = case value of\n    { b, d, e } -> Builtin.addInteger (Builtin.unIData b) (Builtin.addInteger (Builtin.unIData d) (Builtin.unIData e))\nmain : int\nmain = read { a = 1, b = 2, c = 3, d = 4, e = 5 }\n"
---
--- unoptimized Core
let read#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int } -> int = \value#4 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int } -> let match#8 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int } = value#4 in
let projection#21 : list Data = unListData match#8 in
case@List projection#21 of
  Cons ignored#14 fieldTail#15 -> case@List fieldTail#15 of
    Cons field#10 fieldTail#16 -> case@List fieldTail#16 of
      Cons ignored#17 fieldTail#18 -> case@List fieldTail#18 of
        Cons field#12 fieldTail#19 -> case@List fieldTail#19 of
          Cons field#13 fieldTail#20 -> let b#5 : Int = field#10 in
          let d#6 : Int = field#12 in
          let e#7 : Int = field#13 in
          addInteger (unIData b#5) (addInteger (unIData d#6) (unIData e#7)) in
let fromInt#3 : int -> Int = iData in
let main#1 : int = read#2 (listData (mkCons (fromInt#3 1) (mkCons (fromInt#3 2) (mkCons (fromInt#3 3) (mkCons (fromInt#3 4) (mkCons (fromInt#3 5) (con (list data) []))))))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam read_2
    [(lam fromInt_3
      [(lam main_1 main_1)
        [read_2
          [(builtin listData)
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
              [[(force (builtin mkCons)) [fromInt_3 (con integer 2)]]
                [[(force (builtin mkCons)) [fromInt_3 (con integer 3)]]
                  [[(force (builtin mkCons)) [fromInt_3 (con integer 4)]]
                    [[(force (builtin mkCons)) [fromInt_3 (con integer 5)]] (con (list data) [])]]]]]]]])
      (builtin iData)])
    (lam value_4
      [(lam match_8
        [(lam projection_21
          (case
            projection_21
            (lam ignored_14
              (lam fieldTail_15
                (case
                  fieldTail_15
                  (lam field_10
                    (lam fieldTail_16
                      (case
                        fieldTail_16
                        (lam ignored_17
                          (lam fieldTail_18
                            (case
                              fieldTail_18
                              (lam field_12
                                (lam fieldTail_19
                                  (case
                                    fieldTail_19
                                    (lam field_13
                                      (lam fieldTail_20
                                        [(lam b_5
                                          [(lam d_6
                                            [(lam e_7
                                              [[(builtin addInteger) [(builtin unIData) b_5]]
                                                [[(builtin addInteger) [(builtin unIData) d_6]] [(builtin unIData) e_7]]])
                                              field_13])
                                            field_12])
                                          field_10]))
                                    (error))))
                              (error))))
                        (error))))
                  (error))))
            (error)))
          [(builtin unListData) match_8]])
        value_4])])
--- optimized Core
let fromInt#37 : int -> Int = iData in
let anf#43 : Int = fromInt#37 1 in
let anf#44 : Int = fromInt#37 2 in
let anf#45 : Int = fromInt#37 3 in
let anf#46 : Int = fromInt#37 4 in
let anf#47 : Int = fromInt#37 5 in
let anf#48 : list Data = mkCons anf#47 (con (list data) []) in
let anf#49 : list Data = mkCons anf#46 anf#48 in
let anf#50 : list Data = mkCons anf#45 anf#49 in
let anf#51 : list Data = mkCons anf#44 anf#50 in
let anf#52 : list Data = mkCons anf#43 anf#51 in
let anf#53 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int, _4 : Int } = listData anf#52 in
let projection#22 : list Data = unListData anf#53 in
case@List projection#22 of
  Cons ignored#23 fieldTail#24 -> case@List fieldTail#24 of
    Cons field#25 fieldTail#26 -> case@List fieldTail#26 of
      Cons ignored#27 fieldTail#28 -> case@List fieldTail#28 of
        Cons field#29 fieldTail#30 -> case@List fieldTail#30 of
          Cons field#31 fieldTail#32 -> let anf#39 : int = unIData field#25 in
          let anf#40 : int = unIData field#29 in
          let anf#41 : int = unIData field#31 in
          let anf#42 : int = addInteger anf#40 anf#41 in
          addInteger anf#39 anf#42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_55
    [(lam fromInt_1
      [(lam anf_2
        [(lam anf_3
          [(lam anf_4
            [(lam anf_5
              [(lam anf_6
                [(lam anf_7
                  [(lam anf_8
                    [(lam anf_9
                      [(lam anf_10
                        [(lam anf_11
                          [(lam anf_12
                            [(lam projection_13
                              (case
                                projection_13
                                (lam ignored_14
                                  (lam fieldTail_15
                                    (case
                                      fieldTail_15
                                      (lam field_16
                                        (lam fieldTail_17
                                          (case
                                            fieldTail_17
                                            (lam ignored_18
                                              (lam fieldTail_19
                                                (case
                                                  fieldTail_19
                                                  (lam field_20
                                                    (lam fieldTail_21
                                                      (case
                                                        fieldTail_21
                                                        (lam field_33
                                                          (lam fieldTail_34
                                                            [(lam anf_35
                                                              [(lam anf_36
                                                                [(lam anf_38
                                                                  [(lam anf_54 [[(builtin addInteger) anf_35] anf_54])
                                                                    [[(builtin addInteger) anf_36] anf_38]])
                                                                  [(builtin unIData) field_33]])
                                                                [(builtin unIData) field_20]])
                                                              [(builtin unIData) field_16]]))
                                                        (error))))
                                                  (error))))
                                            (error))))
                                      (error))))
                                (error)))
                              [(builtin unListData) anf_12]])
                            [(builtin listData) anf_11]])
                          [[builtin_55 anf_2] anf_10]])
                        [[builtin_55 anf_3] anf_9]])
                      [[builtin_55 anf_4] anf_8]])
                    [[builtin_55 anf_5] anf_7]])
                  [[builtin_55 anf_6] (con (list data) [])]])
                [fromInt_1 (con integer 5)]])
              [fromInt_1 (con integer 4)]])
            [fromInt_1 (con integer 3)]])
          [fromInt_1 (con integer 2)]])
        [fromInt_1 (con integer 1)]])
      (builtin iData)])
    (force (builtin mkCons))])
--- result
(con integer 11)
--- logs
[]
--- budget
cpu: 2378838, memory: 10684
