crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__big_single_constructor_nested_fields.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 878
description: "module Main exposing (..)\ntype Box = Box Int Int\ntype Choice = First Box | Second Int | Third\nselect : Choice -> int\nselect value = case value of\n    First (Box first second) -> Builtin.addInteger (Builtin.unIData first) (Builtin.unIData second)\n    Second number -> Builtin.unIData number\n    Third -> 0\nmain : (int, int, int)\nmain = (select (First (Box 20 22)), select (Second 7), select Third)\n"
---
--- unoptimized Core
let fromInt#12 : int -> int = \value#26 : int -> value#26 in
let select#2 : Main.Choice -> int = \value#8 : Main.Choice -> let match#13 : Main.Choice = value#8 in
let projection#27 : pair int (list Data) = unConstrData match#13 in
case@Pair projection#27 of
  Pair tag#22 fields#23 -> case@Tag tag#22 of
    0 -> case@List fields#23 of
      Cons field#14 fieldTail#24 -> let projection#28 : pair int (list Data) = unConstrData field#14 in
      case@Pair projection#28 of
        Pair tag#17 fields#18 -> case@List fields#18 of
          Cons field#15 fieldTail#19 -> case@List fieldTail#19 of
            Cons field#16 fieldTail#20 -> let first#9 : Int = field#15 in
            let second#10 : Int = field#16 in
            addInteger (unIData first#9) (unIData second#10)
    1 -> case@List fields#23 of
      Cons field#21 fieldTail#25 -> let number#11 : Int = field#21 in
      unIData number#11
    2 -> fromInt#12 0 in
let fromInt#6 : int -> Int = iData in
let main#1 : (int, int, int) = constr 0 (select#2 ((\field#3 : Main.Box -> constrData 0 (mkCons field#3 (con (list data) []))) ((\field#4 : Int field#5 : Int -> constrData 0 (mkCons field#4 (mkCons field#5 (con (list data) [])))) (fromInt#6 20) (fromInt#6 22)))) (select#2 ((\field#7 : Int -> constrData 1 (mkCons field#7 (con (list data) []))) (fromInt#6 7))) (select#2 (constrData 2 (con (list data) []))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_12
    [(lam select_2
      [(lam fromInt_6
        [(lam main_1 main_1)
          (constr 0
            [select_2
              [(lam field_3
                [[(builtin constrData) (con integer 0)]
                  [[(force (builtin mkCons)) field_3] (con (list data) [])]])
                [[(lam field_4
                  (lam field_5
                    [[(builtin constrData) (con integer 0)]
                      [[(force (builtin mkCons)) field_4]
                        [[(force (builtin mkCons)) field_5] (con (list data) [])]]]))
                  [fromInt_6 (con integer 20)]]
                  [fromInt_6 (con integer 22)]]]]
            [select_2
              [(lam field_7
                [[(builtin constrData) (con integer 1)]
                  [[(force (builtin mkCons)) field_7] (con (list data) [])]])
                [fromInt_6 (con integer 7)]]]
            [select_2 [[(builtin constrData) (con integer 2)] (con (list data) [])]])])
        (builtin iData)])
      (lam value_8
        [(lam match_13
          [(lam projection_27
            (case
              projection_27
              (lam tag_22
                (lam fields_23
                  (case
                    tag_22
                    (case
                      fields_23
                      (lam field_14
                        (lam fieldTail_24
                          [(lam projection_28
                            (case
                              projection_28
                              (lam tag_17
                                (lam fields_18
                                  (case
                                    fields_18
                                    (lam field_15
                                      (lam fieldTail_19
                                        (case
                                          fieldTail_19
                                          (lam field_16
                                            (lam fieldTail_20
                                              [(lam first_9
                                                [(lam second_10
                                                  [[(builtin addInteger) [(builtin unIData) first_9]]
                                                    [(builtin unIData) second_10]])
                                                  field_16])
                                                field_15]))
                                          (error))))
                                    (error))))))
                            [(builtin unConstrData) field_14]]))
                      (error))
                    (case
                      fields_23
                      (lam field_21
                        (lam fieldTail_25 [(lam number_11 [(builtin unIData) number_11]) field_21]))
                      (error))
                    [fromInt_12 (con integer 0)])))))
            [(builtin unConstrData) match_13]])
          value_8])])
    (lam value_26 value_26)])
--- optimized Core
let select#50 : Main.Choice -> int = \value#31 : Main.Choice -> let projection#33 : pair int (list Data) = unConstrData value#31 in
case@Pair projection#33 of
  Pair tag#34 fields#35 -> case@Tag tag#34 of
    0 -> case@List fields#35 of
      Cons field#36 fieldTail#37 -> let projection#38 : pair int (list Data) = unConstrData field#36 in
      case@Pair projection#38 of
        Pair tag#39 fields#40 -> case@List fields#40 of
          Cons field#41 fieldTail#42 -> case@List fieldTail#42 of
            Cons field#43 fieldTail#44 -> let anf#57 : int = unIData field#41 in
            let anf#58 : int = unIData field#43 in
            addInteger anf#57 anf#58
    1 -> case@List fields#35 of
      Cons field#47 fieldTail#48 -> unIData field#47
    2 -> 0 in
let fromInt#51 : int -> Int = iData in
let anf#62 : Int = fromInt#51 20 in
let anf#64 : Int = fromInt#51 22 in
let anf#60 : list Data = mkCons anf#64 (con (list data) []) in
let anf#61 : list Data = mkCons anf#62 anf#60 in
let anf#65 : Main.Box = constrData 0 anf#61 in
let anf#59 : list Data = mkCons anf#65 (con (list data) []) in
let anf#66 : Main.Choice = constrData 0 anf#59 in
let anf#67 : int = select#50 anf#66 in
let anf#69 : Int = fromInt#51 7 in
let anf#68 : list Data = mkCons anf#69 (con (list data) []) in
let anf#70 : Main.Choice = constrData 1 anf#68 in
let anf#71 : int = select#50 anf#70 in
let anf#72 : Main.Choice = constrData 2 (con (list data) []) in
let anf#73 : int = select#50 anf#72 in
constr 0 anf#67 anf#71 anf#73
--- optimized UPLC
(program 1.1.0
  [(lam builtin_47
    [(lam partial_48
      [(lam select_18
        [(lam fromInt_19
          [(lam anf_20
            [(lam anf_21
              [(lam anf_22
                [(lam anf_23
                  [(lam anf_24
                    [(lam anf_25
                      [(lam anf_26
                        [(lam anf_27
                          [(lam anf_28
                            [(lam anf_29
                              [(lam anf_30
                                [(lam anf_32
                                  [(lam anf_45 [(lam anf_46 (constr 0 anf_27 anf_32 anf_46)) [select_18 anf_45]])
                                    [[(builtin constrData) (con integer 2)] (con (list data) [])]])
                                  [select_18 anf_30]])
                                [[(builtin constrData) (con integer 1)] anf_29]])
                              [[builtin_47 anf_28] (con (list data) [])]])
                            [fromInt_19 (con integer 7)]])
                          [select_18 anf_26]])
                        [partial_48 anf_25]])
                      [[builtin_47 anf_24] (con (list data) [])]])
                    [partial_48 anf_23]])
                  [[builtin_47 anf_20] anf_22]])
                [[builtin_47 anf_21] (con (list data) [])]])
              [fromInt_19 (con integer 22)]])
            [fromInt_19 (con integer 20)]])
          (builtin iData)])
        (lam value_1
          [(lam projection_2
            (case
              projection_2
              (lam tag_3
                (lam fields_4
                  (case
                    tag_3
                    (case
                      fields_4
                      (lam field_5
                        (lam fieldTail_6
                          [(lam projection_7
                            (case
                              projection_7
                              (lam tag_8
                                (lam fields_9
                                  (case
                                    fields_9
                                    (lam field_10
                                      (lam fieldTail_11
                                        (case
                                          fieldTail_11
                                          (lam field_12
                                            (lam fieldTail_13
                                              [(lam anf_14
                                                [(lam anf_15 [[(builtin addInteger) anf_14] anf_15])
                                                  [(builtin unIData) field_12]])
                                                [(builtin unIData) field_10]]))
                                          (error))))
                                    (error))))))
                            [(builtin unConstrData) field_5]]))
                      (error))
                    (case
                      fields_4
                      (lam field_16 (lam fieldTail_17 [(builtin unIData) field_16]))
                      (error))
                    (con integer 0))))))
            [(builtin unConstrData) value_1]])])
      [(builtin constrData) (con integer 0)]])
    (force (builtin mkCons))])
--- result
(constr 0 (con integer 42) (con integer 7) (con integer 0))
--- logs
[]
--- budget
cpu: 3373841, memory: 17478
