crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__big_unit_pattern_keeps_scrutinee_effects.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 865
description: "module Main exposing (..)\nimport Unit\nconsume : Unit.Unit -> unit\nconsume value = case value of\n    Unit.Unit -> ()\nmain : unit\nmain = consume (trace \"unit input\" Unit.Unit)\n"
---
--- unoptimized Core
let message#9 : string = "unit input" in
let fromUnit#5 : unit -> unit = \value#8 : unit -> value#8 in
let consume#2 : nash/base:Unit.Unit -> unit = \value#4 : nash/base:Unit.Unit -> let match#6 : nash/base:Unit.Unit = value#4 in
fromUnit#5 () in
let fromString#3 : string -> string = \value#7 : string -> value#7 in
let main#1 : unit = consume#2 (trace (fromString#3 message#9) in constrData 0 (con (list data) [])) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_9
    [(lam fromUnit_5
      [(lam consume_2
        [(lam fromString_3
          [(lam main_1 main_1)
            [consume_2
              (force
                [[(force (builtin trace)) [fromString_3 message_9]]
                  (delay [[(builtin constrData) (con integer 0)] (con (list data) [])])])]])
          (lam value_7 value_7)])
        (lam value_4 [(lam match_6 [fromUnit_5 (con unit ())]) value_4])])
      (lam value_8 value_8)])
    (con string "unit input")])
--- optimized Core
let anf#20 : nash/base:Unit.Unit = trace "unit input" in constrData 0 (con (list data) []) in
()
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam anf_1 (con unit ()))
      (force
        [[builtin_2 (con string "unit input")]
          (delay [[(builtin constrData) (con integer 0)] (con (list data) [])])])])
    (force (builtin trace))])
--- result
(con unit ())
--- logs
["unit input"]
--- budget
cpu: 705749, memory: 4064
